--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -2,7 +2,7 @@
   display: block !important;
 }
 .hidden {
-  display: none  !important;
+  display: none !important;
 }
 
 // .hiddenResults{
@@ -185,12 +185,14 @@
           display: flex;
           align-items: baseline;
           .operationBtn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 35px;
             height: 35px;
             border: 0;
             outline: 0;
             background-color: white;
-            display: inline;
             text-align: center;
             &:hover {
               border-radius: 50%;
