--- a/src/assets/scss/pages/_productDetails.scss
+++ b/src/assets/scss/pages/_productDetails.scss
@@ -1,3 +1,7 @@
+.isActive{
+  border: 2px solid black;
+}
+
 .productDetails {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -103,9 +107,6 @@
               box-shadow: rgb(229, 229, 229) 0px 0px 0px 1px;
               height: 48px;
               border-radius: 4px;
-              &:active {
-                border: 2px solid black;
-              }
             }
           }
           .operationBtn {
