--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -1,5 +1,3 @@
-
-
 .cart {
   margin-bottom: 50px;
   .container {
@@ -121,6 +119,37 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+//Responsiveness
+
+@media(max-width:768px){
+  
+.cart {
+  .container {
+    .row {
+      .rightArea {
+        .totalBox {
+          .cargo,
+          .sum {
+            border-bottom: 0;
+          }
+        }
+      }
+    }
+  }
+}
+}
+
+@media(max-width:468px){
+  .cart {
+    margin-bottom: 50px;
+    .container {
+      .row {
+        flex-direction: column;
       }
     }
   }
