--- a/src/assets/scss/pages/_merchMenu.scss
+++ b/src/assets/scss/pages/_merchMenu.scss
@@ -27,3 +27,26 @@
     }
   }
 }
+
+//Responsiveness
+
+@media (max-width:468px){
+  .merchMenu {
+    .container {
+      .row {
+        align-items: flex-start;
+        gap: 20px;
+        flex-direction: column;
+        justify-content: flex-start;
+        .merchMenuList {
+          h4 {
+            font-weight: 500;
+          }
+          .merchMenuItem {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
