--- a/src/assets/scss/pages/_mixedNikePhotos.scss
+++ b/src/assets/scss/pages/_mixedNikePhotos.scss
@@ -1,71 +1,110 @@
 .MixedNikePhotos {
-    margin-top: 10px;
-    margin-bottom: 100px;
-    .row {
-      .mySwiper {
-        .MixedNikePhotosImgBox {
-          width: 300px;
-          height: 300px;
-          img {
-            width: 100%;
-            height: 100%;
-          }
-        }
-        .swiper-button-prev,
-        .swiper-button-next {
-          padding: 85px;
-          position: absolute;
-          top: 0;
-          z-index: 2;
-          height: calc(100% - 50px);
-          background: none;
-          transition: opacity 0.2s ease-in;
-          opacity: 1;
-          border: 0;
-          outline: none;
-          color: #111;
-          font-size: 26px;
-          cursor: pointer;
-          margin-top: 0;
-          &::after {
-            display: block;
-            height: 40px;
-            width: 40px;
-            line-height: 40px;
-            background-color: #fff;
-            border-radius: 20px;
-            text-align: center;
-            font-size: 14px;
-            font-weight: 700;
-            position: absolute;
-            top: calc(50% - 20px);
-            font-weight: 600;
-          }
-        }
-        .swiper-pagination {
-          left: 50%;
-          position: absolute;
-          background: rgba(17, 17, 17, 0.4);
-          border-radius: 20px;
-          color: #fff;
-          padding: 6px 16px;
-          transition: opacity 0.5s;
-          width: 50px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          text-align: center;
-          margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 100px;
+  .row {
+    .mySwiper {
+      .MixedNikePhotosImgBox {
+        width: 300px;
+        height: 300px;
+        img {
+          width: 100%;
+          height: 100%;
         }
       }
-    }
-    .MixedNikePhotosInfo {
-      position: absolute;
-      left: 50%;
-      margin-top: 15px;
-      a {
-        color: #757575;
+      .swiper-button-prev,
+      .swiper-button-next {
+        padding: 85px;
+        position: absolute;
+        top: 0;
+        z-index: 2;
+        height: calc(100% - 50px);
+        background: none;
+        transition: opacity 0.2s ease-in;
+        opacity: 1;
+        border: 0;
+        outline: none;
+        color: #111;
+        font-size: 26px;
+        cursor: pointer;
+        margin-top: 0;
+        &::after {
+          display: block;
+          height: 40px;
+          width: 40px;
+          line-height: 40px;
+          background-color: #fff;
+          border-radius: 20px;
+          text-align: center;
+          font-size: 14px;
+          font-weight: 700;
+          position: absolute;
+          top: calc(50% - 20px);
+          font-weight: 600;
+        }
+      }
+      .swiper-pagination {
+        left: 50%;
+        position: absolute;
+        background: rgba(17, 17, 17, 0.4);
+        border-radius: 20px;
+        color: #fff;
+        padding: 6px 16px;
+        transition: opacity 0.5s;
+        width: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin: 0 auto;
       }
     }
   }
-  
+  .MixedNikePhotosInfo {
+    position: absolute;
+    left: 50%;
+    margin-top: 15px;
+    a {
+      color: #757575;
+    }
+  }
+}
+
+
+@media (max-width: 1024px) {
+  .MixedNikePhotos {
+    .row {
+      margin: 0 35px 0 0;
+      .mySwiper {
+        .MixedNikePhotosImgBox {
+          width: auto;
+          height: auto;
+          margin-left: 24px;
+        }
+        .swiper-button-prev,
+        .swiper-button-next {
+          padding: 42px;
+        }
+      }
+    }
+  }
+}
+
+// @media (max-width: 468px) {
+//   .MixedNikePhotos {
+//     .row {
+//       .mySwiper {
+//         .MixedNikePhotosImgBox {
+//           width: auto;
+//           height: auto;
+//         }
+//         .swiper-button-prev,
+//         .swiper-button-next {
+//           padding: 53px;
+//         }
+//       }
+//     }
+//     .MixedNikePhotosInfo {
+//       display: none;
+//     }
+//   }
+// }
