--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -49,6 +49,9 @@
             gap: 20px;
             .navItem {
               cursor: pointer;
+              .shopLink{
+                color: #000;
+              }
               &:hover {
                 color: #757575;
                 border-bottom: 2px solid #000;
