--- a/src/assets/scss/pages/_productDetails.scss
+++ b/src/assets/scss/pages/_productDetails.scss
@@ -10,8 +10,8 @@
       justify-content: space-around;
       .productImg {
         position: relative;
-        width: 535px;
-        height: 669px;
+        width: auto;
+        height: auto;
         img {
           border-radius: 10px;
           width: 100%;
