--- a/src/assets/scss/pages/_register.scss
+++ b/src/assets/scss/pages/_register.scss
@@ -1,5 +1,3 @@
-
-
 .register {
   .container {
     .row {
@@ -63,6 +61,11 @@
               font-size: 12px;
               color: #8d8d8d;
             }
+            .error-message {
+              font-size: 12px;
+              color: red;
+              margin: 10px 0;
+            }
           }
           .gender {
             display: flex;
@@ -121,7 +124,6 @@
           background-color: #000;
           border: 1px solid #000;
           border-radius: 3px;
-          color: #fff;
           cursor: pointer;
           display: block;
           font-family: TradeGothicforNike365-BdCn, Helvetica !important;
