--- a/src/assets/scss/pages/_register.scss
+++ b/src/assets/scss/pages/_register.scss
@@ -82,6 +82,7 @@
               align-items: center;
               display: flex;
               justify-content: center;
+              cursor: pointer;
               p {
                 color: #8d8d8d;
               }
@@ -124,6 +125,7 @@
           background-color: #000;
           border: 1px solid #000;
           border-radius: 3px;
+          color: #fff;
           cursor: pointer;
           display: block;
           font-family: TradeGothicforNike365-BdCn, Helvetica !important;
