--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -327,7 +327,7 @@
                   gap: 10px;
                   font-size: 18px;
                   span {
-                    visibility: hidden;
+                    visibility: visible;
                   }
                 }
               }
