--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -290,6 +290,7 @@
             right: 24px;
             transition: opacity 0.3s ease 0s, visibility 0.3s ease 0s;
             box-shadow: -5px 3px 64px 23px rgba(0, 0, 0, 0.75);
+            border-radius: 5px;
             h6 {
               margin: 10px;
               display: flex;
