--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -14,6 +14,8 @@
 @import "./pages/favorite";
 @import "./pages/profile";
 @import "./pages/notFound";
+@import "./pages/pay";
+
 
 // Sections
 @import "./pages/hero";
