--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -133,6 +133,7 @@
   .cart {
     .container {
       .row {
+        justify-content: space-between;
         .rightArea {
           .totalBox {
             .cargo,
