--- a/src/assets/scss/pages/section/_forSport.scss
+++ b/src/assets/scss/pages/section/_forSport.scss
@@ -108,7 +108,7 @@
           .sportImgBox {
             width: auto;
             height: auto;
-            margin-left: 24px;
+            margin-left: 0;
           }
           .swiper-button-prev,
           .swiper-button-next {
