--- a/src/assets/scss/components/_trendProduct.scss
+++ b/src/assets/scss/components/_trendProduct.scss
@@ -82,3 +82,93 @@
     }
   }
 }
+
+
+//Responsiveness
+
+@media(max-width:468px){
+  .trendProduct {
+    height: 655px;
+    margin-top: 100px;
+    .container {
+      .trendProductInfo {
+        margin-bottom: 50px;
+        .trendProductTitle {
+          margin: 11px 0;
+          color: #111;
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 28px;
+        }
+      }
+      .mySwiper {
+        .SwiperSlide {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .card {
+            .cardImg {
+              position: relative;
+              min-width: 300px;
+              min-height: 300px;
+              animation: 2s ease-in;
+              img {
+                width: 100%;
+                height: 100%;
+              }
+            }
+            .cardInfo {
+              margin: 16px 16px 0 0;
+              .productInfo {
+                display: flex;
+                justify-content: space-between;
+                font-size: 16px;
+                line-height: 24px;
+                .productName,
+                .price {
+                  color: #111;
+                  font-size: 16px;
+                  line-height: 24px;
+                }
+              }
+              .ProductType {
+                color: #757575;
+              }
+            }
+          }
+        }
+        .swiper-button-prev,
+        .swiper-button-next {
+          padding: 25px;
+          position: absolute;
+          top: 0;
+          z-index: 2;
+          height: calc(100% - 50px);
+          background: none;
+          transition: opacity 0.2s ease-in;
+          opacity: 1;
+          border: 0;
+          outline: none;
+          color: #fff;
+          font-size: 26px;
+          cursor: pointer;
+          margin-top: 0;
+          &::after {
+            display: block;
+            height: 40px;
+            width: 40px;
+            line-height: 40px;
+            background-color: #000;
+            border-radius: 20px;
+            text-align: center;
+            font-size: 14px;
+            font-weight: 700;
+            position: absolute;
+            top: calc(50% - 20px);
+            font-weight: 600;
+          }
+        }
+      }
+    }
+  }
+}
