--- a/src/assets/scss/pages/_notFound.scss
+++ b/src/assets/scss/pages/_notFound.scss
@@ -1,27 +1,35 @@
-.notFound {
-  margin: 100px 0;
+.page_404 {
+  padding: 40px 0;
+  background: #fff;
+  font-family: "Arvo", serif;
   .container {
     .row {
-      flex-direction: column;
-      h2 {
-        margin: 0 auto;
-        font-size: 20px;
-        font-size: 50px;
-      }
-      .link {
-        margin: 20px auto;
-        width: 15%;
-        a {
-          text-align: center;
-          background-color: #000;
-          border: 1px solid #000;
-          border-radius: 3px;
-          color: #fff;
-          cursor: pointer;
-          display: block;
-          font-family: TradeGothicforNike365-BdCn, Helvetica !important;
-          font-size: 15px;
-          padding: 12px;
+      align-items: center;
+      justify-content: center;
+      .col-sm-12 {
+        width: 100%;
+        img {
+          width: 100%;
+        }
+        .four_zero_four_bg {
+          background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+          height: 400px;
+          background-position: center;
+        }
+        .contant_box_404 {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          p {
+            font-size: 27px;
+          }
+          .link_404 {
+            color: #fff !important;
+            padding: 10px 20px;
+            background: #39ac31;
+            margin: 50px 0;
+            display: inline-block;
+          }
         }
       }
     }
