--- a/src/assets/scss/pages/_shop.scss
+++ b/src/assets/scss/pages/_shop.scss
@@ -80,7 +80,7 @@
               font-size: 16px;
               padding-bottom: 10px;
             }
-            .price{
+            .price {
               color: #111111;
               padding-right: 5px;
               font-weight: 500;
@@ -89,5 +89,71 @@
         }
       }
     }
+  }
+}
+
+
+//Responsiveness
+
+@media (max-width: 1024px) {
+  .shop {
+    margin-bottom: 50px;
+    .container {
+      .row {
+        .bottom {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 20px;
+          .card {
+            .cardImg {
+              width: 437px;
+              height: 447px;
+            }
+            .cardInfo {
+              width: 200px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .shop {
+    margin-bottom: 30px;
+    .container {
+      .row {
+        .bottom {
+          display: flex;
+          flex-wrap: wrap;
+          .card {
+            width: 33%;
+            position: relative;
+            font-size: 16px;
+            line-height: 1.75;
+            padding-right: 8px;
+            .cardImg {
+              width: 320px;
+              height: 320px;
+              img {
+                width: 100%;
+                height: 100%;
+              }
+            }
+            .cardInfo {
+              width: 200px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 468px) {
+  .cardInfo {
+    width: 300px;
   }
 }
