--- a/src/assets/scss/pages/section/_mixedNikePhotos.scss
+++ b/src/assets/scss/pages/section/_mixedNikePhotos.scss
@@ -1,18 +1,9 @@
-.nikeMembership {
+.MixedNikePhotos {
+  margin-top: 10px;
   margin-bottom: 100px;
-  .nikeMembershipTitle {
-    margin-bottom: 50px;
-    h3 {
-      color: #111;
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 28px;
-      margin-left: 40px;
-    }
-  }
   .row {
     .mySwiper {
-      .membershipImgBox {
+      .MixedNikePhotosImgBox {
         width: 300px;
         height: 300px;
         img {
@@ -68,9 +59,9 @@
       }
     }
   }
-  .membershipInfo {
+  .MixedNikePhotosInfo {
     position: absolute;
-    left: 45%;
+    left: 50%;
     margin-top: 15px;
     a {
       color: #757575;
@@ -78,14 +69,13 @@
   }
 }
 
-//Responsiveness
 
 @media (max-width: 1024px) {
-  .nikeMembership {
+  .MixedNikePhotos {
     .row {
       margin: 0 35px 0 0;
       .mySwiper {
-        .membershipImgBox {
+        .MixedNikePhotosImgBox {
           width: auto;
           height: auto;
           margin-left: 24px;
@@ -96,25 +86,26 @@
         }
       }
     }
-    .membershipInfo {
-      display: none;
-    }
   }
 }
 
 @media (max-width: 468px) {
-  .nikeMembership {
+  .MixedNikePhotos {
     .row {
       .mySwiper {
-        .membershipImgBox {
+        .MixedNikePhotosImgBox {
           width: auto;
           height: auto;
+          margin-left: 0;
         }
         .swiper-button-prev,
         .swiper-button-next {
           padding: 53px;
         }
       }
+    }
+    .MixedNikePhotosInfo {
+      display: none;
     }
   }
 }
