--- a/src/assets/scss/pages/section/_nikeMembership.scss
+++ b/src/assets/scss/pages/section/_nikeMembership.scss
@@ -1,9 +1,18 @@
-.MixedNikePhotos {
-  margin-top: 10px;
+.nikeMembership {
   margin-bottom: 100px;
+  .nikeMembershipTitle {
+    margin-bottom: 50px;
+    h3 {
+      color: #111;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 28px;
+      margin-left: 40px;
+    }
+  }
   .row {
     .mySwiper {
-      .MixedNikePhotosImgBox {
+      .membershipImgBox {
         width: 300px;
         height: 300px;
         img {
@@ -59,9 +68,9 @@
       }
     }
   }
-  .MixedNikePhotosInfo {
+  .membershipInfo {
     position: absolute;
-    left: 50%;
+    left: 45%;
     margin-top: 15px;
     a {
       color: #757575;
@@ -69,13 +78,14 @@
   }
 }
 
+//Responsiveness
 
 @media (max-width: 1024px) {
-  .MixedNikePhotos {
+  .nikeMembership {
     .row {
       margin: 0 35px 0 0;
       .mySwiper {
-        .MixedNikePhotosImgBox {
+        .membershipImgBox {
           width: auto;
           height: auto;
           margin-left: 24px;
@@ -86,25 +96,26 @@
         }
       }
     }
+    .membershipInfo {
+      display: none;
+    }
   }
 }
 
-// @media (max-width: 468px) {
-//   .MixedNikePhotos {
-//     .row {
-//       .mySwiper {
-//         .MixedNikePhotosImgBox {
-//           width: auto;
-//           height: auto;
-//         }
-//         .swiper-button-prev,
-//         .swiper-button-next {
-//           padding: 53px;
-//         }
-//       }
-//     }
-//     .MixedNikePhotosInfo {
-//       display: none;
-//     }
-//   }
-// }
+@media (max-width: 468px) {
+  .nikeMembership {
+    .row {
+      .mySwiper {
+        .membershipImgBox {
+          width: auto;
+          height: auto;
+          margin-left: 0;
+        }
+        .swiper-button-prev,
+        .swiper-button-next {
+          padding: 53px;
+        }
+      }
+    }
+  }
+}
